# DearPyGuiWrapper

./: README.md  pyproject.toml
dearpygui_wrapper/: __init__.py  base.py  node_editor.py  value.py  window.py
dearpygui_wrapper/LICENSES/: LICENSE_dearpygui
