[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dearpygui-wrapper"
version = "1.0.0"
authors = [
  { name="Taogya", email="taogya.sfh@gmail.com" },
]
description = "dearpygui-wrapper is a wrapper for DearPyGui that provides a more pythonic interface."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "dearpygui",
]
[tool.hatch.build]
include = [
    "dearpygui_wrapper",
]
exclude = [
    "build",
    "sample",
]

[project.urls]
"Homepage" = "https://github.com/taogya/DearPyGuiWrapper"
"Bug Tracker" = "https://github.com/taogya/DearPyGuiWrapper/issues"